--- a/day_5/Cargo.toml
+++ b/day_5/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+indicatif = { version = "0.17.7", features = ["rayon"] }
+rayon = "1.8.0"
+nom = "7.1.3"
+nom-supreme = "0.8.0"
